[project]
name = "open-sourdough-analyze"
version = "0.1.0"
description = ""
authors = [{ name = "Andreas Borgstad", email = "aborgstad@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "opencv-python>=4.7.0.72,<5",
    "setuptools>=67.4.0,<68",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=23.1.0,<24",
    "isort>=5.12.0,<6",
]
